--- a/src/app/views/login/login.component.scss
+++ b/src/app/views/login/login.component.scss
@@ -42,4 +42,15 @@
         }
     }
 
+    &__error {
+        margin-top: 20px;
+        text-align: center;
+        font-size: 13px;
+
+        &__field {
+            font-size: 13px;
+            margin-top: 5px;
+        }
+    }
+
 }
