fix: login styles

--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -27,5 +27,6 @@
             <button type="submit">Entrar</button>
         </div>
     </form>
+    <img src="../../../assets/images/planet.svg" alt="" class="login__form__img">
     <app-loader *ngIf="loading"></app-loader>
 </div>
