add: responsive movies components

--- a/src/app/components/movies-detail/movies-detail.component.html
+++ b/src/app/components/movies-detail/movies-detail.component.html
@@ -1,5 +1,5 @@
 <div class="movies-detail">
-    <p (click)="getDetails(index)" *ngIf="!showDetails">> Details</p>
+    <p (click)="getDetails(index)" *ngIf="!showDetails" class="movies-detail__title">> Details</p>
     <div *ngIf="showDetails">
         <div class="movies-detail__more">
             <h4 class="movies-detail__more__title">Producer</h4>
