--- a/src/app/components/movies-list/movies-list.component.scss
+++ b/src/app/components/movies-list/movies-list.component.scss
@@ -51,6 +51,8 @@
     &__title {
         color: #FFC500;
         font-size: 18px;
+        font-weight: 100;
+        text-transform: uppercase;
     }
 
     &__description {
