--- a/src/app/components/movies-detail/movies-detail.component.scss
+++ b/src/app/components/movies-detail/movies-detail.component.scss
@@ -3,6 +3,8 @@
 
     &__title {
         color: #FF0000;
+        margin-left: 3px;
+        cursor: pointer;
     }
 
     &__more {
@@ -12,6 +14,18 @@
             color: #FFC500;
             text-transform: uppercase;
             font-weight: 100;
+        }
+    }
+
+    &__content {
+        display: flex;
+        align-items: center;
+        
+        img {
+            cursor: pointer;
+            &:last-child {
+                margin-left: -0.5px;
+            }
         }
     }
 }
