--- a/src/app/components/movies-list/movies-list.component.html
+++ b/src/app/components/movies-list/movies-list.component.html
@@ -14,8 +14,7 @@
                 <app-movies-detail 
                     director={{movie.director}} 
                     producer={{movie.producer}} 
-                    isActive={{isActive}}
-                    index={{i}}
+                    index={{i+1}}
                 >
                 </app-movies-detail>
             </div>
