--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,8 +1,8 @@
-<div class="search">
+<div class="search" [formGroup]="search">
     <div class="search__label">
         <img src="../../../assets/svgs/popcorn.svg" alt="popcorn">
         <label>Films</label>
     </div>
-    <input type="text" class="search__input" (keyup)="getMoviesSearched($event)">
-    <img src="../../../assets/svgs/search.svg" alt="search" class="search__img">
+    <input type="text" class="search__input" formControlName="term">
+    <img src="../../../assets/svgs/search.svg" alt="search" class="search__img" (click)="getMoviesSearched(term)">
 </div>
