--- a/src/app/views/movie/movie.component.html
+++ b/src/app/views/movie/movie.component.html
@@ -1,3 +1,3 @@
 <app-logo [size]="size"></app-logo>
-<app-search></app-search>
-<app-movies-list></app-movies-list>
+<app-search (moviesSearch)="getMoviesFiltered($event)"></app-search>
+<app-movies-list [moviesSearched]="moviesFiltered"></app-movies-list>
