--- a/src/app/components/movies-list/movies-list.component.scss
+++ b/src/app/components/movies-list/movies-list.component.scss
@@ -65,6 +65,7 @@
         display: flex;
         align-items: center;
         margin-left: 3px;
+        cursor: pointer;
     }
 
     &__infos {
