fix: login and register styles

--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -1,2 +1,6 @@
 <app-logo [size]="size"></app-logo>
-<app-auth [type]="type"></app-auth>
+<section class="login">
+    <h1 class="o-title">Login</h1>
+    <app-auth [type]="type"></app-auth>
+    <p class="login__register">Ainda não possui uma conta? Cadastre-se <a routerLink="/register">aqui</a>.</p>
+</section>
