--- a/src/app/views/register/register.component.html
+++ b/src/app/views/register/register.component.html
@@ -1,2 +1,5 @@
 <app-logo [size]="size"></app-logo>
-<app-auth [type]="type"></app-auth>
+<section class="register">
+    <h1 class="o-title">Register</h1>
+    <app-auth [type]="type"></app-auth>
+</section>
