add: logout component

--- a/src/app/views/movie/movie.component.html
+++ b/src/app/views/movie/movie.component.html
@@ -1,3 +1,4 @@
 <app-logo [size]="size"></app-logo>
 <app-search (moviesSearch)="getMoviesFiltered($event)"></app-search>
 <app-movies-list [moviesSearched]="moviesFiltered"></app-movies-list>
+<app-logout></app-logout>
