add: interceptor to redirect when localstorage change values

--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,10 +1,7 @@
 <section class="home">
     <app-logo></app-logo>
     <span class="home__title">THE FORCE WILL BE WITH YOU</span>
-    <div class="home__action" (click)="navigateTo()" *ngIf="!checkToken()">
+    <div class="home__action" (click)="navigateTo()">
         <a>Login</a>
-    </div>
-    <div class="home__action" (click)="navigateTo()" *ngIf="checkToken()">
-        <a>Ver filmes</a>
     </div>
 </section>
