add: animation on loader of movies page

--- a/src/app/components/auth/auth.component.html
+++ b/src/app/components/auth/auth.component.html
@@ -30,5 +30,5 @@
         </div>
     </form>
     <img src="../../../assets/svgs/planet.svg" alt="" class="auth__form__img">
-    <app-loader *ngIf="loading"></app-loader>
+    <app-loader *ngIf="loading" [type]="loaderType"></app-loader>
 </div>
