--- a/src/app/components/movies-detail/movies-detail.component.html
+++ b/src/app/components/movies-detail/movies-detail.component.html
@@ -18,5 +18,5 @@
             <p>{{producer}}</p>
         </div>
     </div>
-    <app-loader *ngIf="loading"></app-loader>
+    <app-loader *ngIf="loading" [type]="loaderType"></app-loader>
 </div>
