--- a/src/app/components/loader/loader.component.scss
+++ b/src/app/components/loader/loader.component.scss
@@ -1,39 +1,87 @@
 .loader {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 1;
-    background-color: #3b2c2c;
-    opacity: .9;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+    &__login {
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        z-index: 1;
+        background-color: #3b2c2c;
+        opacity: .9;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
 
-    svg {
-        animation: fillingIcon 1.5s ease-in-out;
+        svg {
+            animation: fillingIcon 1.5s ease-in-out;
+        }
+
+        @keyframes fillingIcon {
+            0% {
+                color:#FFC500;
+                transform: rotate(45deg);
+            }
+            25% {
+                transform: rotate(90deg);
+            }
+            50% {
+                color: rgb(255, 0, 0);
+                transform: rotate(180deg);
+            }
+            75% {
+                color: rgba(84, 138, 135, 0.952);
+                transform: rotate(269deg);
+            }
+            100% {
+                transform: rotate(360deg);
+            }
+        }
     }
 
-    @keyframes fillingIcon {
-        0% {
-            color:#FFC500;
-            transform: rotate(45deg);
+    &__movies {
+        .pupil {
+            color: #dfdfdf;
+            animation: blinking 1.2s ease-in-out;
+            animation-delay: 1.65s;
         }
-        25% {
-            transform: rotate(90deg);
+
+        .eyee {
+            color: #2d2706;
+            animation: blinking 1.2s ease-in-out;
+            animation-delay: 1.65s;
         }
-        50% {
-            color: rgb(255, 0, 0);
-            transform: rotate(180deg);
+
+        svg {
+            animation: moveToRight 1.3s forwards;
         }
-        75% {
-            color: rgba(84, 138, 135, 0.952);
-            transform: rotate(269deg);
+
+        @keyframes blinking {
+            0% {
+                opacity: 1;
+            }
+            50% {
+                opacity: 0.75;
+                color: #665b0e;
+            }
+            75% {
+                opacity: 0.50;
+            }
+            100% {
+                opacity: 0.25;
+            }
         }
-        100% {
-            transform: rotate(360deg);
+
+        @keyframes moveToRight {
+            0% {
+                transform: scale(.6);
+            }
+            50% {
+                transform: translateX(108px) scale(.8);
+            }
+            100% {
+                transform: translateX(216px) scale(1);
+            }
         }
     }
 
