--- a/src/app/components/movies-detail/movies-detail.component.html
+++ b/src/app/components/movies-detail/movies-detail.component.html
@@ -2,7 +2,7 @@
     <div class="movies-detail__content" (click)="getDetails(index)" *ngIf="!showDetails">
         <img src="../../../assets/svgs/detail.svg" alt="detail">
         <img src="../../../assets/svgs/detail.svg" alt="detail">
-        <p class="movies-detail__title" [ngClass]="isActive ? 'movies-detail__title--white': '' ">Details</p>
+        <p class="movies-detail__title">Details</p>
     </div>
     <div *ngIf="showDetails && !loading">
         <div class="movies-detail__more">
