add: more hovers (auth, home and login)

--- a/src/app/components/auth/auth.component.html
+++ b/src/app/components/auth/auth.component.html
@@ -25,8 +25,11 @@
         <div class="auth__error" *ngIf="errors && registered">
             <p class="auth__error__field">E-mail já cadastrado. Entre <a routerLink="/login">aqui</a></p>
         </div>
-        <div class="auth__form__btn">
+        <div class="auth__form__btn" *ngIf="type === 'login'">
             <button type="submit">Entrar</button>
+        </div>
+        <div class="auth__form__btn" *ngIf="type === 'register'">
+            <button type="submit">Criar Conta</button>
         </div>
     </form>
     <img src="../../../assets/svgs/planet.svg" alt="" class="auth__form__img">
