--- a/src/app/views/home/home.component.scss
+++ b/src/app/views/home/home.component.scss
@@ -15,9 +15,36 @@
         text-align: center;
         margin-top: 45px;
         background: transparent;
-        border: 1px solid #fff;
+        text-transform: uppercase;
         padding: 10px;
         color: #fff;
         cursor: pointer;
+
+        &:hover {
+            animation: borderProgress 5s both .5s;
+        }
+    }
+
+    @keyframes borderProgress {
+        0% {
+            border: 0;
+            border-top: 1px solid #ffc500;
+        }
+
+        25% {
+            border-right: 1px solid #ffc500;
+        }
+
+        50% {
+            border-bottom: 1px solid #ffc500;
+        }
+
+        75% {
+            border-left: 1px solid #ffc500;
+        }
+
+        100% {
+            border: 1px solid #ffc500;
+        }
     }
 }
