--- a/src/app/views/login/login.component.scss
+++ b/src/app/views/login/login.component.scss
@@ -10,6 +10,11 @@
         a {
             color: #FFC500;
             text-decoration: none;
+            transition: all .3s ease-in-out;
+
+            &:hover {
+                border-bottom: 1px solid #FFC500;
+            }
         }
     }
 }
